# ubuntu_gadgets

./: Cargo.toml  README.md  rustfmt.toml
gadgets/ibus_engine_switch/: Cargo.toml  README.md
gadgets/ibus_engine_switch/src/: lib.rs  main.rs
gadgets/ibus_engine_switch/tests/: hotkey.rs
gadgets/workspace_switch/: Cargo.toml  README.md
gadgets/workspace_switch/src/: main.rs
