[package]
name = "ibus_engine_switch"
version.workspace = true
authors.workspace = true
description = "Take over the ibus engine switching from gnome."
edition.workspace = true
readme = "README.md"

[[bin]]
name = "ibus_engine_switch"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive"] }
lazy_static = "1.5.0"
rdev = "0.5.3"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
which = "8.0.0"
x11rb = "0.13.1"
