[package]
name = "workspace_switch"
version.workspace = true
authors.workspace = true
description = "Workspace switch cli."
readme = "README.md"
edition.workspace = true

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
lazy_static = "1.5.0"
regex = "1.11.1"
thiserror = "2.0.12"
which = "8.0.0"

[[bin]]
name = "wsst"
path = "src/main.rs"
